Packages/Dojo/Runtime/bindings/client/dojo.gen.cs


// <auto-generated>
//  This code was generated by the following tool on 2023-12-19 14:51:00 GMT-05:00:
//      https://github.com/bottlenoselabs/c2cs (v0.0.0.0)
//
//  Changes to this file may cause incorrect behavior and will be lost if the code is regenerated.
// </auto-generated>
// ReSharper disable All

#region Template
#nullable enable
#pragma warning disable CS1591
#pragma warning disable CS8981
using bottlenoselabs.C2CS.Runtime;
using System;
using System.Collections.Generic;
using System.Globalization;
using System.Runtime.InteropServices;
using System.Runtime.CompilerServices;
using System.Linq;
#endregion

namespace dojo_bindings
{

    public static unsafe partial class dojo
    {
        private const string LibraryName = "torii_c";

        #region API

        [CNode(Kind = "Function")]
        [DllImport(LibraryName, EntryPoint = "account_address", CallingConvention = CallingConvention.Cdecl)]
        public static extern FieldElement account_address(Account* account);

        [CNode(Kind = "Function")]
        [DllImport(LibraryName, EntryPoint = "account_chain_id", CallingConvention = CallingConvention.Cdecl)]
        public static extern FieldElement account_chain_id(Account* account);

        [CNode(Kind = "Function")]
        [DllImport(LibraryName, EntryPoint = "account_execute_raw", CallingConvention = CallingConvention.Cdecl)]
        public static extern Result_bool account_execute_raw(Account* account, Call* calldata, UIntPtr calldata_len);

        [CNode(Kind = "Function")]
        [DllImport(LibraryName, EntryPoint = "account_free", CallingConvention = CallingConvention.Cdecl)]
        public static extern void account_free(Account* account);

        [CNode(Kind = "Function")]
        [DllImport(LibraryName, EntryPoint = "account_new", CallingConvention = CallingConvention.Cdecl)]
        public static extern Result_____Account account_new(CJsonRpcClient* rpc, FieldElement private_key, CString address);

        [CNode(Kind = "Function")]
        [DllImport(LibraryName, EntryPoint = "account_set_block_id", CallingConvention = CallingConvention.Cdecl)]
        public static extern void account_set_block_id(Account* account, BlockId block_id);

        [CNode(Kind = "Function")]
        [DllImport(LibraryName, EntryPoint = "carray_free", CallingConvention = CallingConvention.Cdecl)]
        public static extern void carray_free(void* data, UIntPtr data_len);

        [CNode(Kind = "Function")]
        [DllImport(LibraryName, EntryPoint = "client_add_models_to_sync", CallingConvention = CallingConvention.Cdecl)]
        public static extern Result_bool client_add_models_to_sync(ToriiClient* client, KeysClause* models, UIntPtr models_len);

        [CNode(Kind = "Function")]
        [DllImport(LibraryName, EntryPoint = "client_entities", CallingConvention = CallingConvention.Cdecl)]
        public static extern Result_CArray_Entity client_entities(ToriiClient* client, Query* query);

        [CNode(Kind = "Function")]
        [DllImport(LibraryName, EntryPoint = "client_free", CallingConvention = CallingConvention.Cdecl)]
        public static extern void client_free(ToriiClient* t);

        [CNode(Kind = "Function")]
        [DllImport(LibraryName, EntryPoint = "client_metadata", CallingConvention = CallingConvention.Cdecl)]
        public static extern WorldMetadata client_metadata(ToriiClient* client);

        [CNode(Kind = "Function")]
        [DllImport(LibraryName, EntryPoint = "client_model", CallingConvention = CallingConvention.Cdecl)]
        public static extern Result_COption_____Ty client_model(ToriiClient* client, KeysClause* keys);

        [CNode(Kind = "Function")]
        [DllImport(LibraryName, EntryPoint = "client_new", CallingConvention = CallingConvention.Cdecl)]
        public static extern Result_____ToriiClient client_new(CString torii_url, CString rpc_url, CString world, KeysClause* entities, UIntPtr entities_len);

        [CNode(Kind = "Function")]
        [DllImport(LibraryName, EntryPoint = "client_on_entity_state_update", CallingConvention = CallingConvention.Cdecl)]
        public static extern Result_bool client_on_entity_state_update(ToriiClient* client, FieldElement* entities, UIntPtr entities_len, FnPtr_FieldElement_CArrayModel_Void callback);

        [CNode(Kind = "Function")]
        [DllImport(LibraryName, EntryPoint = "client_on_sync_model_update", CallingConvention = CallingConvention.Cdecl)]
        public static extern Result_bool client_on_sync_model_update(ToriiClient* client, KeysClause model, FnPtr_Void callback);

        [CNode(Kind = "Function")]
        [DllImport(LibraryName, EntryPoint = "client_remove_models_to_sync", CallingConvention = CallingConvention.Cdecl)]
        public static extern Result_bool client_remove_models_to_sync(ToriiClient* client, KeysClause* models, UIntPtr models_len);

        [CNode(Kind = "Function")]
        [DllImport(LibraryName, EntryPoint = "client_start_subscription", CallingConvention = CallingConvention.Cdecl)]
        public static extern Result_bool client_start_subscription(ToriiClient* client);

        [CNode(Kind = "Function")]
        [DllImport(LibraryName, EntryPoint = "client_subscribed_models", CallingConvention = CallingConvention.Cdecl)]
        public static extern CArray_KeysClause client_subscribed_models(ToriiClient* client);

        [CNode(Kind = "Function")]
        [DllImport(LibraryName, EntryPoint = "entity_free", CallingConvention = CallingConvention.Cdecl)]
        public static extern void entity_free(Entity* entity);

        [CNode(Kind = "Function")]
        [DllImport(LibraryName, EntryPoint = "error_free", CallingConvention = CallingConvention.Cdecl)]
        public static extern void error_free(Error* error);

        [CNode(Kind = "Function")]
        [DllImport(LibraryName, EntryPoint = "felt_from_hex_be", CallingConvention = CallingConvention.Cdecl)]
        public static extern Result_FieldElement felt_from_hex_be(CString hex);

        [CNode(Kind = "Function")]
        [DllImport(LibraryName, EntryPoint = "jsonrpc_client_free", CallingConvention = CallingConvention.Cdecl)]
        public static extern void jsonrpc_client_free(CJsonRpcClient* rpc);

        [CNode(Kind = "Function")]
        [DllImport(LibraryName, EntryPoint = "jsonrpc_client_new", CallingConvention = CallingConvention.Cdecl)]
        public static extern Result_____CJsonRpcClient jsonrpc_client_new(CString rpc_url);

        [CNode(Kind = "Function")]
        [DllImport(LibraryName, EntryPoint = "model_free", CallingConvention = CallingConvention.Cdecl)]
        public static extern void model_free(Model* model);

        [CNode(Kind = "Function")]
        [DllImport(LibraryName, EntryPoint = "signing_key_new", CallingConvention = CallingConvention.Cdecl)]
        public static extern FieldElement signing_key_new();

        [CNode(Kind = "Function")]
        [DllImport(LibraryName, EntryPoint = "signing_key_sign", CallingConvention = CallingConvention.Cdecl)]
        public static extern Result_Signature signing_key_sign(FieldElement private_key, FieldElement hash);

        [CNode(Kind = "Function")]
        [DllImport(LibraryName, EntryPoint = "string_free", CallingConvention = CallingConvention.Cdecl)]
        public static extern void string_free(CString @string);

        [CNode(Kind = "Function")]
        [DllImport(LibraryName, EntryPoint = "ty_free", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ty_free(Ty* ty);

        [CNode(Kind = "Function")]
        [DllImport(LibraryName, EntryPoint = "verifying_key_new", CallingConvention = CallingConvention.Cdecl)]
        public static extern FieldElement verifying_key_new(FieldElement signing_key);

        [CNode(Kind = "Function")]
        [DllImport(LibraryName, EntryPoint = "verifying_key_verify", CallingConvention = CallingConvention.Cdecl)]
        public static extern Result_bool verifying_key_verify(FieldElement verifying_key, FieldElement hash, Signature signature);

        [CNode(Kind = "Function")]
        [DllImport(LibraryName, EntryPoint = "world_metadata_free", CallingConvention = CallingConvention.Cdecl)]
        public static extern void world_metadata_free(WorldMetadata* metadata);

        #endregion

        #region Types

        [CNode(Kind = "FunctionPointer")]
        [StructLayout(LayoutKind.Sequential)]
        public struct FnPtr_FieldElement_CArrayModel_Void
        {
            [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
            public unsafe delegate void @delegate(FieldElement param, CArray_Model param2);

            public IntPtr Pointer;

            public FnPtr_FieldElement_CArrayModel_Void(@delegate d)
            {
                Pointer = Marshal.GetFunctionPointerForDelegate(d);
            }
        }

        [CNode(Kind = "FunctionPointer")]
        [StructLayout(LayoutKind.Sequential)]
        public struct FnPtr_Void
        {
            [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
            public unsafe delegate void @delegate();

            public IntPtr Pointer;

            public FnPtr_Void(@delegate d)
            {
                Pointer = Marshal.GetFunctionPointerForDelegate(d);
            }
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 40, Pack = 8)]
        public struct BlockId
        {
            [FieldOffset(0)] // size = 4
            public BlockId_Tag tag;

            [FieldOffset(8)] // size = 32
            public FieldElement hash;

            [FieldOffset(8)] // size = 8
            public ulong number;

            [FieldOffset(8)] // size = 4
            public BlockTag block_tag;
        }

        [CNode(Kind = "Union")]
        [StructLayout(LayoutKind.Explicit, Size = 32, Pack = 8)]
        public struct BlockId_ANONYMOUS_FIELD1
        {
            [FieldOffset(0)] // size = 32
            public FieldElement hash;

            [FieldOffset(0)] // size = 8
            public ulong number;

            [FieldOffset(0)] // size = 4
            public BlockTag block_tag;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 32, Pack = 1)]
        public struct BlockId_ANONYMOUS_FIELD1_ANONYMOUS_FIELD0
        {
            [FieldOffset(0)] // size = 32
            public FieldElement hash;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 8, Pack = 8)]
        public struct BlockId_ANONYMOUS_FIELD1_ANONYMOUS_FIELD1
        {
            [FieldOffset(0)] // size = 8
            public ulong number;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 4, Pack = 4)]
        public struct BlockId_ANONYMOUS_FIELD1_ANONYMOUS_FIELD2
        {
            [FieldOffset(0)] // size = 4
            public BlockTag block_tag;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 16, Pack = 8)]
        public struct CArray_CHashItem______c_char__ModelMetadata
        {
            [FieldOffset(0)] // size = 8
            public CHashItem______c_char__ModelMetadata* data;

            [FieldOffset(8)] // size = 8
            public UIntPtr data_len;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 16, Pack = 8)]
        public struct CArray_Clause
        {
            [FieldOffset(0)] // size = 8
            public Clause* data;

            [FieldOffset(8)] // size = 8
            public UIntPtr data_len;
        }

        [CNode(Kind = "Struct")]
        [StructLayout(LayoutKind.Explicit, Size = 16, Pack = 8)]
        public struct CArray_Entity
        {
            [FieldOffset(0)] // size = 8
            public Entity* data;

            [FieldOffset(8)] // size = 8
            public UIntPtr data_len;
        }
